--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,7 +13,7 @@
       - Added new settings options for image file handling, lint filtering, and snippet queuing.
       - Fixed registration of action groups.
     ]]></change-notes>
-    <idea-version since-build="232"/>
+    <idea-version since-build="243" until-build="250.*"/>
     <depends>com.intellij.modules.java</depends>
     <extensions defaultExtensionNs="com.intellij">
         <notificationGroup id="ClipCraft" displayType="BALLOON"/>
