fix: improve documentation formatting and consistency
Updated documentation files for better readability, consistency, and formatting. Adjusted markdown syntax, cleaned up spacing, and streamlined instructions across various sections including Usage, Configuration, and Contributing guidelines.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,7 +145,7 @@ jobs:
       - name: "Generate Release Tag (for branch push)"
         if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.actor == github.repository_owner
         run: |
-          TAG="auto-v$(date +%Y%m%d%H%M%S)-${GITHUB_SHA::7}"
+          TAG="auto-v$(date +%Y%m%d%H%M%S)-${GITHUB_SHA:0:7}"
           echo "Generated tag: $TAG"
           git tag "$TAG"
           git push origin "$TAG"
