fix: improve documentation formatting and consistency
Updated documentation files for better readability, consistency, and formatting. Adjusted markdown syntax, cleaned up spacing, and streamlined instructions across various sections including Usage, Configuration, and Contributing guidelines.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,15 @@ tmp/
 /.intellijPlatform/localPlatformArtifacts/bundledPlugin-org.toml.lang-IC-243.23654.189.xml
 /.intellijPlatform/localPlatformArtifacts/bundledPlugin-tanvd.grazi-IC-243.23654.189.xml
 /.intellijPlatform/self-update.lock
+/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.intellij.copyright-IC-232.9559.62.xml
+/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.intellij.copyright-IC-241.14494.240.xml
+/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.intellij.java-IC-232.9559.62.xml
+/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.intellij.java-IC-241.14494.240.xml
+/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.intellij.platform.images-IC-232.9559.62.xml
+/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.intellij.platform.images-IC-241.14494.240.xml
+/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.jetbrains.performancePlugin-IC-232.9559.62.xml
+/.intellijPlatform/localPlatformArtifacts/bundledPlugin-com.jetbrains.performancePlugin-IC-241.14494.240.xml
+/.intellijPlatform/localPlatformArtifacts/bundledPlugin-Git4Idea-IC-232.9559.62.xml
+/.intellijPlatform/localPlatformArtifacts/bundledPlugin-Git4Idea-IC-241.14494.240.xml
+/.intellijPlatform/localPlatformArtifacts/bundledPlugin-training-IC-232.9559.62.xml
+/.intellijPlatform/localPlatformArtifacts/bundledPlugin-training-IC-241.14494.240.xml
