fix: improve documentation formatting and consistency
Updated documentation files for better readability, consistency, and formatting. Adjusted markdown syntax, cleaned up spacing, and streamlined instructions across various sections including Usage, Configuration, and Contributing guidelines.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,10 +78,11 @@ jobs:
 
       - name: "Publish Test Report"
         if: always()
+        continue-on-error: true
         uses: dorny/test-reporter@v1
         with:
           name: "JUnit Tests"
-          path: build/test-results/test
+          path: build/test-results/test/*.xml
           reporter: "java-junit"
           list-suites: 'all'
           list-tests: 'all'
