--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,24 +1,24 @@
 <idea-plugin>
     <id>com.clipcraft</id>
     <name>ClipCraft</name>
-    <version>241</version>
+    <version>0.3.1-SNAPSHOT</version>
     <vendor url="https://github.com/tabano86/ClipCraft" email="support@clipcraft.com">ClipCraft Inc.</vendor>
     <description><![CDATA[
-      ClipCraft extracts and formats code from multiple files or directories, supports concurrency modes,
-      dynamic ignoring, snippet previewing, a built-in lint scanner, and an AI‐assisted copy process.
-    ]]></description>
+    ClipCraft extracts and formats code from multiple files or directories, supports concurrency modes,
+    dynamic ignoring, snippet previewing, a built-in lint scanner, and an AI‐assisted copy process.
+  ]]></description>
     <change-notes><![CDATA[
-      6.0.0:
-      - Removed GPT functionality.
-      - Added new settings options for image file handling, lint filtering, and snippet queuing.
-      - Fixed registration of action groups.
-    ]]></change-notes>
-    <idea-version since-build="241.*"/>
+    6.0.0:
+    - Removed GPT functionality.
+    - Added new settings options for image file handling, lint filtering, and snippet queuing.
+    - Fixed registration of action groups.
+  ]]></change-notes>
+    <idea-version since-build="241.*" until-build="299.*"/>
     <depends>com.intellij.modules.java</depends>
     <extensions defaultExtensionNs="com.intellij">
         <notificationGroup id="ClipCraft" displayType="BALLOON"/>
         <applicationConfigurable id="clipcraft.settings" instance="com.clipcraft.ui.ClipCraftSettingsConfigurable" displayName="ClipCraft"/>
-        <!-- <toolWindow id="ClipCraft.Lint" factoryClass="com.clipcraft.ui.ClipCraftLintToolWindowFactory" anchor="left" icon="com.clipcraft.icons.ClipCraftIcons.CLIPCRAFT_24" secondary="true"/>-->
+        <!-- <toolWindow id="ClipCraft.Lint" factoryClass="com.clipcraft.ui.ClipCraftLintToolWindowFactory" anchor="left" icon="com.clipcraft.icons.ClipCraftIcons.CLIPCRAFT_24" secondary="true"/> -->
         <searchEverywhereContributor implementation="com.clipcraft.integration.ClipCraftSearchEverywhereContributorFactory"/>
     </extensions>
     <actions>
