--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,16 +2,16 @@
     <id>com.clipcraft</id>
     <name>ClipCraft</name>
     <version>0.3.1-SNAPSHOT</version>
-    <vendor url="https://github.com/tabano86/ClipCraft" email="support@clipcraft.com">ClipCraft Inc.</vendor>
+    <vendor url="https://github.com/clipcraft" email="support@clipcraft.com">ClipCraft Inc.</vendor>
     <description><![CDATA[
-    ClipCraft extracts and formats code from multiple files or directories, supports concurrency modes,
-    dynamic ignoring, snippet previewing, a built-in lint scanner, and an AI‐assisted copy process.
+ClipCraft extracts and formats code from multiple files or directories, supports concurrency modes,
+dynamic ignoring, snippet previewing, a built-in lint scanner, and an AI‐assisted copy process.
   ]]></description>
     <change-notes><![CDATA[
-    6.0.0:
-    - Removed GPT functionality.
-    - Added new settings options for image file handling, lint filtering, and snippet queuing.
-    - Fixed registration of action groups.
+6.0.0:
+- Removed GPT functionality.
+- Added new settings options for image file handling, lint filtering, and snippet queuing.
+- Fixed registration of action groups.
   ]]></change-notes>
     <idea-version since-build="241.*" until-build="299.*"/>
     <depends>com.intellij.modules.java</depends>
