--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,16 +145,25 @@ jobs:
             echo "Using generated tag: ${RELEASE_TAG}"
           fi
 
+      - name: "Commit version file changes if any"
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git add -A
+          if ! git diff-index --quiet HEAD; then
+            git commit -m 'chore: update version files pre-release'
+            git push origin main
+          else
+            echo 'No changes to commit'
+          fi
+
       - name: "Publish Plugin with Retry"
         uses: nick-fields/retry@v3
         with:
           max_attempts: 3
           timeout_minutes: 5
           command: |
-            bash -c "set -x; \
-            git add -A && (git commit -m 'chore: update version files pre-release' || echo 'No changes to commit') && \
-            git push origin main && \
-            ./gradlew release publishPlugin --no-daemon --stacktrace --parallel"
+            bash -c "set -x; ./gradlew release publishPlugin --no-daemon --stacktrace --parallel"
         env:
           ORG_GRADLE_PROJECT_intellijPlatformPublishingToken: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
 
