--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,7 +163,10 @@ jobs:
           max_attempts: 3
           timeout_minutes: 5
           command: |
-            bash -c "set -x; ./gradlew release publishPlugin --no-daemon --stacktrace --parallel"
+            bash -c "set -x; \
+            git add -A && (git commit -m 'chore: update version files pre-release' || echo 'No changes to commit') && \
+            git push origin main && \
+            ./gradlew release publishPlugin --no-daemon --stacktrace --parallel"
         env:
           ORG_GRADLE_PROJECT_intellijPlatformPublishingToken: ${{ secrets.JB_PLUGIN_REPOSITORY_TOKEN }}
 
