refactor: improve lazy loading for ClipCraftSettings
Refactored `ClipCraftSettings` to ensure settings are loaded lazily via a new `ensureLoaded` method, improving performance and safety. Removed redundant initialization in the constructor and added comments to clarify behavior. Adjusted plugin actions to improve clarity and integration into IntelliJ UI.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -9,48 +9,40 @@ dynamic ignoring, snippet previewing, a built-in lint scanner, and an AI‐assis
     ]]></description>
     <change-notes><![CDATA[
 6.1.0:
-- Added CutCopyPasteGroup registration for the "ClipCraft Copy" action, so it shows alongside built-in Copy/Paste.
-- Fixed recursion ignoring hidden directories.
-- Improved language detection by using IntelliJ PSI.
-- Fixed profile persisting bug in settings.
+- Now we have one direct “ClipCraft Copy” action in CutCopyPasteGroup,
+  plus a “ClipCraft Toolbox” submenu in the same group!
     ]]></change-notes>
 
-    <!-- Adjust these "since-build" / "until-build" as needed for your IDE versions -->
-    <idea-version since-build="241.*" until-build="299.*" />
+    <!-- If needed, specify precise build versions instead of wildcard. Example:
+    <idea-version since-build="241.14494" until-build="241.99999"/> -->
     <depends>com.intellij.modules.java</depends>
 
     <extensions defaultExtensionNs="com.intellij">
+
+        <!-- Notification group for balloon messages -->
         <notificationGroup id="ClipCraft" displayType="BALLOON"/>
 
+        <!-- Our settings page in Preferences | Settings -->
         <applicationConfigurable
                 id="clipcraft.settings"
                 instance="com.clipcraft.ui.ClipCraftSettingsConfigurable"
                 displayName="ClipCraft" />
 
-        <!-- Re-enable and anchor the Lint tool window at bottom (if desired) -->
+        <!-- Lint tool window if you desire -->
         <toolWindow
                 id="ClipCraft.Lint"
                 factoryClass="com.clipcraft.ui.ClipCraftLintToolWindowFactory"
                 anchor="bottom"
                 icon="com.clipcraft.icons.ClipCraftIcons.CLIPCRAFT_24"
-                secondary="true"/>
+                secondary="true" />
 
+        <!-- Search Everywhere integration -->
         <searchEverywhereContributor
-                implementation="com.clipcraft.integration.ClipCraftSearchEverywhereContributorFactory"/>
+                implementation="com.clipcraft.integration.ClipCraftSearchEverywhereContributorFactory" />
     </extensions>
 
     <actions>
-        <!-- A top-level subgroup for all ClipCraft features -->
-        <group
-                id="ClipCraft.Submenu"
-                text="ClipCraft Actions"
-                description="All ClipCraft plugin features"
-                popup="true"
-                class="com.intellij.openapi.actionSystem.DefaultActionGroup">
-            <add-to-group group-id="ProjectViewPopupMenu" anchor="last"/>
-            <add-to-group group-id="EditorPopupMenu" anchor="last"/>
-        </group>
-
+        <!-- 1) A single direct action: 'ClipCraft Copy' in CutCopyPasteGroup. -->
         <action
                 id="ClipCraftCopyAction"
                 class="com.clipcraft.actions.ClipCraftAction"
@@ -58,52 +50,52 @@ dynamic ignoring, snippet previewing, a built-in lint scanner, and an AI‐assis
                 description="Copies, formats, and merges code snippets"
                 icon="com.clipcraft.icons.ClipCraftIcons.CLIPCRAFT_16">
 
-            <!-- Now also group it with the built-in copy/paste group -->
+            <!-- Added directly to built-in Cut/Copy/Paste group -->
+            <add-to-group group-id="CutCopyPasteGroup" anchor="last" />
+        </action>
+
+        <!-- 2) A creative submenu also in the same group, holding the rest of your actions. -->
+        <group
+                id="ClipCraft.Submenu"
+                text="ClipCraft Toolbox"
+                description="All other ClipCraft features"
+                popup="true"
+                class="com.intellij.openapi.actionSystem.DefaultActionGroup">
+
+            <!-- Attach this entire group to CutCopyPasteGroup as well -->
             <add-to-group group-id="CutCopyPasteGroup" anchor="last" />
 
-            <!-- We can keep these if we still want the option in context menus -->
-            <add-to-group group-id="ProjectViewPopupMenu" anchor="last"/>
-            <add-to-group group-id="EditorPopupMenu" anchor="last"/>
-        </action>
+            <action
+                    id="ClipCraftWizardAction"
+                    class="com.clipcraft.actions.ClipCraftWizardAction"
+                    text="Setup Wizard"
+                    description="Guided configuration for ClipCraft" />
 
-        <action
-                id="ClipCraftWizardAction"
-                class="com.clipcraft.actions.ClipCraftWizardAction"
-                text="Setup Wizard"
-                description="Guided configuration for ClipCraft">
-            <add-to-group group-id="ClipCraft.Submenu" anchor="last"/>
-        </action>
+            <action
+                    id="ClipCraftResetDefaultsAction"
+                    class="com.clipcraft.actions.ClipCraftResetDefaultsAction"
+                    text="Reset Defaults"
+                    description="Reset all ClipCraft settings to factory state" />
 
-        <action
-                id="ClipCraftResetDefaultsAction"
-                class="com.clipcraft.actions.ClipCraftResetDefaultsAction"
-                text="Reset Defaults"
-                description="Reset all ClipCraft settings to factory state">
-            <add-to-group group-id="ClipCraft.Submenu" anchor="last"/>
-        </action>
+            <action
+                    id="ClipCraftSwitchProfileAction"
+                    class="com.clipcraft.actions.ClipCraftSwitchProfileAction"
+                    text="Switch Profile"
+                    description="Switch among multiple ClipCraft profiles" />
 
-        <action
-                id="ClipCraftSwitchProfileAction"
-                class="com.clipcraft.actions.ClipCraftSwitchProfileAction"
-                text="Switch Profile"
-                description="Switch among multiple ClipCraft profiles">
-            <add-to-group group-id="ClipCraft.Submenu" anchor="last"/>
-        </action>
+            <action
+                    id="OpenClipCraftSettings"
+                    class="com.intellij.ide.actions.ShowSettingsAction"
+                    text="Open ClipCraft Settings"
+                    description="Opens the ClipCraft settings page" />
 
-        <action
-                id="OpenClipCraftSettings"
-                class="com.intellij.ide.actions.ShowSettingsAction"
-                text="Open ClipCraft Settings"
-                description="Opens the ClipCraft settings page">
-            <add-to-group group-id="ClipCraft.Submenu" anchor="last"/>
-        </action>
+            <separator />
 
-        <action
-                id="ClipCraftAddSnippetFromCursorAction"
-                class="com.clipcraft.actions.ClipCraftAddSnippetFromCursorOrSelectionAction"
-                text="Add Snippet from Caret"
-                description="Extract snippet from code near caret or selection">
-            <add-to-group group-id="ClipCraft.Submenu" anchor="last"/>
-        </action>
+            <action
+                    id="ClipCraftAddSnippetFromCursorAction"
+                    class="com.clipcraft.actions.ClipCraftAddSnippetFromCursorOrSelectionAction"
+                    text="Add Snippet from Caret"
+                    description="Extract snippet from code near caret or selection" />
+        </group>
     </actions>
 </idea-plugin>
